# atlas-kit-python-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: update_coverage_badge.py
src/atlas_rag/: config.py  pipeline.py
src/atlas_rag/api/: app.py  routes.py
src/atlas_rag/embedding/: base.py  local.py  openai.py
src/atlas_rag/generation/: base.py  ollama.py  openai.py
src/atlas_rag/ingestion/: chunker.py  loader.py
src/atlas_rag/store/: base.py  chroma.py
tests/: test_api.py  test_chunker.py  test_embedding.py  test_pipeline.py
